force-app/main/default/objects/Housing_Unit__c/Housing_Unit__c.object-meta.xml
<CustomObject>
    <description
  >Represents a physical or virtual placement location used in animal-care operations.</description>
    <label>Housing Unit</label>
    <nameField>
        <label>Housing Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Housing Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>