force-app/main/default/objects/Housing_Unit__c/fields/Current_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Current_Occupancy__c</fullName>
    <description
  >Operational reporting field for current occupancy.</description>
    <label>Current Occupancy</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>