force-app/main/default/objects/Housing_Unit__c/fields/Housing_Type__c.field-meta.xml
<CustomField>
    <fullName>Housing_Type__c</fullName>
    <description>Classification for the housing unit.</description>
    <label>Housing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A360_Housing_Type</valueSetName>
    </valueSet>
</CustomField>