force-app/main/default/objects/Housing_Unit__c/fields/Site_Account__c.field-meta.xml
<CustomField>
    <fullName>Site_Account__c</fullName>
    <description>Owning or operating site organisation.</description>
    <label>Site Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Housing Units</relationshipLabel>
    <relationshipName>Housing_Units</relationshipName>
    <type>Lookup</type>
</CustomField>