force-app/main/default/objects/Housing_Unit__c/fields/Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Unit_Code__c</fullName>
    <description
  >Operational code used to identify the housing unit.</description>
    <label>Unit Code</label>
    <length>40</length>
    <required>true</required>
    <unique>true</unique>
    <type>Text</type>
</CustomField>